# magnum-bazel

./: .gitignore  BUILD.bazel  BUILD.bazel_linux  BUILD.bazel_macos  CMakeLists.txt  LICENSE  README.md  build_magnum.sh  magnum_rules.bzl
.github/workflows/: build.yml
sample/: BUILD  scenegraph_example.cpp
sample/picking/: BUILD  PickingExample.cpp
sample/scenegraph/: scenegraph_example.cpp
